<resources>
    <string name="app_name">USSD code</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tariflar">Tariflar</string>
    <string name="daqiqalar">Daqiqalar</string>
    <string name="oylik_internet_to_plamlar">Oylik internet to\'plamlar</string>
    <string name="corporate">Corporate</string>
    <string name="ba_tafsil">Ba\'tafsil</string>
    <string name="batafsil">Batafsil</string>
    <string name="kunlik_internet">Kunlik internet</string>
    <string name="tungi_drive">Tungi drive</string>
    <string name="mobi_20">Mobi 20</string>
    <string name="_300_mb">300 mb</string>
    <string name="_8_ming_so_m">8 ming So\'m</string>
    <string name="daqiqalar2">Daqiqalar</string>
</resources>