<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="Fragment.NewsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/corporate"
                android:textColor="#CA1010"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#CA1010"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/txtBatafsil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/batafsil"
                android:textColor="#CA1010"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/kunlik_internet"
                android:textColor="#CA1010"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#CA1010"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/txtBatafsil2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/ba_tafsil"
                android:textColor="#CA1010"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/tungi_drive"
                android:textColor="#CA1010"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#CA1010"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/txtBatafsil3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/ba_tafsil"
                android:textColor="#CA1010"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>